sandbox/output
FizzBuzzTest.java:9: error: cannot find symbol
        assertEquals("1", fizzBuzz.print(1));
                                  ^
  symbol:   method print(int)
  location: variable fizzBuzz of type FizzBuzz
1 error
